fix(): prevent layout shift on mobile browsers

--- a/src/components/docs-layout/docs-layout.scss
+++ b/src/components/docs-layout/docs-layout.scss
@@ -1,11 +1,11 @@
 docs-layout {
   display: grid;
   grid-template-columns: auto 1fr;
-  grid-template-rows: var(--header-height);
+  grid-template-rows: var(--header-height) calc(100% - var(--header-height));
   grid-template-areas: "menu header" "menu content";
-  height: 100vh;
+  height: 100%;
   transition: transform 350ms cubic-bezier(0.19, 1, 0.22, 1);
-  width: 100vw;
+  width: 100%;
 }
 
 docs-layout.is-menu-open {
